# CMake-FindSDL-Test

./: runTest.sh
SDLBuild/: CMakeLists.txt
SDLUse/: CMakeLists.txt  SDLUse.cpp
